force-app/main/default/objects/Rental_Booking__c/Rental_Booking__c.object-meta.xml
<CustomObject>
    <label>Rental Booking</label>
    <nameField>
        <displayFormat>RB-{0000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>