force-app/main/default/objects/Rental_Booking__c/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>