force-app/main/default/objects/Rental_Booking__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Rental Bookings</relationshipLabel>
    <relationshipName>Rental_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>